--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,12 +1,16 @@
 <h3><%= @question.body %> (<%= @question_number %>/<%= @question_count%>)</h3>
 <br>
-<form method="POST" action="/submit_answer">
+<form method="POST" action="/submit_answer" class="someotherthing">
     <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-    <% @question.answers.each do |answer| %>
-        <input type="radio" style="text-align: left;" name="answer_id" value="<%= answer.id %>"/>
-        <%= answer.body %></div>
-        <br>
-    <% end %>
-    <hr style="max-width: 400px;">
+    <table>
+        <% @question.answers.each do |answer| %>
+            <tr>
+                <td>
+                    <input type="radio" name="answer_id" value="<%= answer.id %>"/></td><td><%= answer.body %>
+                </td>
+            </tr>
+        <% end %>
+    </table>
+    <hr>
     <input type="submit"/>
 </form>
