--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+.something {
+    padding: 25px;
+    background-color: #eee;
+    border-radius: 10px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1150px;
+}
+
+.someotherthing {
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
+}
